--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/<base href="/AplikasiPercobaan/">
-
+  <base href="/AplikasiPercobaan/">
+  
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -36,5 +36,6 @@
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
+
 
 
